--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -25,9 +25,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/tempusStyle.css">
     <link href="css/tiny-slider.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
     <title>Tempus watch store</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
 
   <body>
@@ -60,7 +62,6 @@
             <li><a class="nav-link" href="blog.html">Smartwatches</a></li>
             <li><a class="nav-link" href="contact.html">Luxury</a></li>
             <li><a class="nav-link" href="contact.html">Offers</a></li>
-
           </ul>
 
           <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
@@ -69,11 +70,13 @@
                 ><img src="images/icons8-search-22.png"
               /></a>
             </li>
-			<li>
-              <a class="nav-link" href="#"><img src="images/user.svg" /></a>
+            <li>
+              <a class="nav-link" href="/login"
+                ><img src="images/user.svg"
+              /></a>
             </li>
-			<li>
-              <a class="nav-link" href="cart.html"
+            <li>
+              <a class="nav-link" href="/verifyOtp"
                 ><img src="images/icons8-heart-28.png"
               /></a>
             </li>
@@ -82,7 +85,6 @@
                 ><img src="images/cart.svg"
               /></a>
             </li>
-			
           </ul>
         </div>
       </div>
