Wee13 Upto user dashboard done

--- a/views/partials/user/footer.ejs
+++ b/views/partials/user/footer.ejs
@@ -2,9 +2,10 @@
 		<footer class="footer-section">
 			<div class="container relative">
 
-				<!-- <div class="sofa-img">
-					<img src="images/Fossil Machine FS4656.jpg" alt="Image" class="img-fluid rounded-3">
-				</div> -->
+				        <!-- <div class="sofa-img">
+          <img src="images/Fossil Machine FS4656.jpg" alt="Image" class="img-fluid rounded-3">
+        </div> -->
+
 
 				<div class="row">
 					<div class="col-lg-8">
@@ -30,12 +31,12 @@
 				</div>
 
 				<div class="row g-5 mb-5">
-					<div class="col-lg-4">
-						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Tempus<span>.</span></a></div>
-						
-					</div>
+          <div class="col-lg-4">
+            <div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Tempus<span>.</span></a></div>
+            
+          </div>
 
-					<div class="container">
+          <div class="container">
     <div class="row">
       
 
@@ -81,19 +82,16 @@
     </div>
 
 
-    <hr class="mt-4">
-
-    <div class="text-center small text-muted">
+				<div class="border-top copyright">
+					<div class="text-center small text-muted">
       © 2025 Tempus. All rights reserved. |
       <a href="#" class="text-decoration-none text-muted">Privacy</a> |
       <a href="#" class="text-decoration-none text-muted">Terms</a>
     </div>
-  </div>
 
-					</div>
 				</div>
 
-			
+			</div>
 		</footer>
 		<!-- End Footer Section -->	
 
@@ -101,25 +99,6 @@
 		<script src="js/bootstrap.bundle.min.js"></script>
 		<script src="js/tiny-slider.js"></script>
 		<script src="js/custom.js"></script>
-    <script src="js/userSignupValidate.js"></script>
-    <script src="js/otpVerifyTimer.js"></script>
-    <script>
-  // Function to get URL parameters
-  function getQueryParam(param) {
-    const urlParams = new URLSearchParams(window.location.search);
-    return urlParams.get(param);
-  }
-
-  const message = getQueryParam('message');
-  if (message) {
-    Swal.fire({
-      icon: 'info',           // you can change icon to 'error' or 'warning' if you want
-      title: 'Notice',
-      text: decodeURIComponent(message)
-    });
-  }
-</script>
-
 	</body>
 
 </html>
