--- a/views/user/forgotPassword.ejs
+++ b/views/user/forgotPassword.ejs
@@ -7,9 +7,9 @@
     <div class="row justify-content-center">
       <div class="col-md-6 rounded-lg">
         <div class="card shadow-lg p-4 rounded-4">
-          <h3 class="text-center mb-4">Welcome</h3>
-          <h5 class="text-center mb-5">Sign in to your Tempus account</h5>
-          <form id="loginForm" action="/login" method="POST" novalidate>
+          <h3 class="text-center mb-4">Forgot Password</h3>
+          <h5 class="text-center mb-5">Enter Email Address</h5>
+          <form id="forgotPswd" action="/forgotPasswordOtp" method="POST" novalidate>
            
 
             <!-- Email -->
@@ -25,30 +25,14 @@
               <p id="err1" style="color: rgb(157, 63, 63)"></p>
             </div>
 
-            
-            <!-- Password -->
-            <div class="mb-3">
-              <input
-                type="password"
-                class="form-control"
-                id="password"
-                name="password"
-                placeholder="Enter your Password"
-                required
-                minlength="8"
-              />
-              <p id="err2" style="color: rgb(157, 63, 63)"></p>
-              
-            </div>
-
 
             <!-- Submit -->
-            <button type="submit" class="btn btn-primary w-100">Sign In</button>
+            <button type="submit" class="btn btn-primary w-100">Send OTP</button>
           </form>
 
           <div class="d-flex align-items-center justify-content-center">
-            <form action="/forgotPassword" method="get">
-              <button id="forgotPswd" type="submit" class="btn btn-primary border-0 bg-white text-dark text-decoration-underline">Forgot Password ?</button>
+            <form action="/login" method="get">
+              <button id="backToLogin" type="submit" class="btn btn-primary border-0 bg-white text-dark text-decoration-underline">Back to sign in</button>
             </form>
           </div>
 
@@ -70,7 +54,7 @@
           </div>
 
           <div class="d-flex align-items-center justify-content-center mt-3">
-            Don't have an account?<a href="/signup"> Sign up here </a>
+            Don't have an account?<a href="/login"> Sign up here </a>
           </div>
         </div>
       </div>
