--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -1,8 +1,7 @@
 <!--HEADER-->
 <%- include('../../views/partials/user/header')%>
 <!--HEADER-->
-
-		<!-- Start Hero Section -->
+	<!-- Start Hero Section -->
 			<div class="hero">
 				<div class="container">
 					<div class="row justify-content-between">
@@ -375,7 +374,8 @@
 			</div>
 		</div>
 		<!-- End Blog Section -->	
-
+</body>
+</html>
 <!--FOOTER-->
 <%- include('../../views/partials/user/footer')%>
 <!--FOOTER-->
