--- a/views/user/userSignup.ejs
+++ b/views/user/userSignup.ejs
@@ -128,18 +128,19 @@
           <div class="text-center my-3">
             <span>OR</span>
           </div>
-
-          <a
-            href="/auth/google"
-            class="btn bg-white text-dark btn-outline-danger w-100 d-flex align-items-center justify-content-center"
-          >
-            <img
-              src="https://developers.google.com/identity/images/g-logo.png"
-              alt="Google Logo"
-              style="width: 20px; height: 20px; margin-right: 8px"
-            />
-            Sign up with Google
-          </a>
+          <div>
+            <a
+              href="/auth/google"
+              class="btn bg-white text-dark btn-outline-danger w-100 d-flex align-items-center justify-content-center"
+            >
+              <img
+                src="https://developers.google.com/identity/images/g-logo.png"
+                alt="Google Logo"
+                style="width: 20px; height: 20px; margin-right: 8px"
+              />
+              Sign up with Google
+            </a>
+          </div>
 
           <div class="d-flex align-items-center justify-content-center mt-3">
             Already have an account?<a href="/login"> Sign in here </a>
