--- a/views/user/verifyOtp.ejs
+++ b/views/user/verifyOtp.ejs
@@ -3,20 +3,20 @@
 <!--HEADER-->
 
 <div class="signup-container">
-  <div class="container my-5">
+  <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-6 rounded-lg">
         <div class="card shadow-lg p-4 rounded-4">
           <h3 class="text-center mb-3">Enter OTP</h3>
           <h5 class="text-center mb-5">Check Your Email for OTP</h5>
-          <form id="signupForm" action="/signup" method="POST" novalidate>
+          <form id="otpForm" action="/verifyOtp" method="POST" novalidate>
             <!-- Email -->
             <div class="mb-4">
               <input
                 type="text"
                 class="form-control"
-                id="confirmPassword"
-                name="confirmPassword"
+                id="otp"
+                name="otp"
                 inputmode="numeric"
                 pattern="[0-9]{6}"
                 maxlength="6"
@@ -27,8 +27,12 @@
 
             <!-- Submit -->
             <div class="d-flex align-items-center justify-content-center">
-              <button type="submit" id="verify" class="btn btn-primary w-100 me-3" onclick="validateOtpForm()">
-                Verify Email
+              <button
+                type="submit"
+                id="verify"
+                class="btn btn-primary w-100 me-3"
+              >
+                Verify OTP
               </button>
               <!-- <button type="submit" class="btn btn-primary w-40">Resend OTP</button> -->
             </div>
@@ -38,18 +42,19 @@
             Resend OTP in :<span id="timer">02:00</span>
           </div>
           <div class="d-flex align-items-center justify-content-center">
-            <a href="#"> Resend </a>
+            <form action="/resendOtp" method="POST">
+              <button id="resend" type="submit" class="btn btn-primary border-0 bg-white text-dark text-decoration-underline">Resend OTP</button>
+            </form>
           </div>
 
-          <div class="d-flex align-items-center justify-content-center mt-3">
+          <!-- <div class="d-flex align-items-center justify-content-center mt-3">
             Already have an account?<a href="/login"> Sign in here </a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
   </div>
 </div>
-
 
 <!--FOOTER-->
 <%- include('../../views/partials/user/footer')%>
