Week 13 Completed upto admin side category

--- a/public/css/tempusStyle.css
+++ b/public/css/tempusStyle.css
@@ -1,5 +1,5 @@
 .signup-container {
-  background: linear-gradient(135deg, #769489 0%, #769489 100%);
+  background: linear-gradient(180deg, #3b5d50  0%, #769489 100%);
   min-height: 100vh;
   position: relative;
   overflow: hidden;
