--- a/views/user/forgotPassword.ejs
+++ b/views/user/forgotPassword.ejs
@@ -100,7 +100,7 @@
               <div
                 class="d-flex align-items-center justify-content-center mt-3"
               >
-                Don't have an account?<a href="/login"> Sign up here </a>
+                Don't have an account?<a href="/signup"> Sign up here </a>
               </div>
             </div>
           </div>
