--- a/views/admin/adminlogin.ejs
+++ b/views/admin/adminlogin.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AdminUserAuth</title>
+    <title>Admin Tempus</title>
     <style>
       .bg-img2 {
   background-image: url('/img/homePic2.jpg');
