--- a/views/partials/admin/sideBar.ejs
+++ b/views/partials/admin/sideBar.ejs
@@ -19,7 +19,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="/admin/products/add" class="nav-link-custom">
+            <a href="/admin/products" class="nav-link-custom">
               <i class="bi bi-box me-2"></i>
               <p class="mb-0 ms-2">Products</p>
             </a>
