--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -55,22 +55,38 @@
                 type="clear"
                 style="border-radius: 5px"
               >
-                <a href="/admin/category" class="text-decoration-none text-white"
+                <a
+                  href="/admin/category"
+                  class="text-decoration-none text-white"
                   >Clear</a
                 >
               </button>
             </div>
           </form>
-          <div class="dropdown dropdown-menu-end"> 
-                <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" > 
-                  Fiter by status 
-                </button> 
-                <ul class="dropdown-menu"> 
-                  <li><a class="dropdown-item" onclick="checkActive('all')">All</a></li>
-                  <li><a class="dropdown-item" onclick="checkActive('activated')">Actived</a></li> 
-                  <li><a class="dropdown-item" onclick="checkActive('deactivated')">Deactived</a></li> 
-                </ul> 
-              </div>
+          <div class="dropdown dropdown-menu-end">
+            <button
+              type="button"
+              class="btn btn-primary dropdown-toggle"
+              data-bs-toggle="dropdown"
+            >
+              Fiter by status
+            </button>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="dropdown-item" onclick="checkActive('all')">All</a>
+              </li>
+              <li>
+                <a class="dropdown-item" onclick="checkActive('activated')"
+                  >Actived</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item" onclick="checkActive('deactivated')"
+                  >Deactived</a
+                >
+              </li>
+            </ul>
+          </div>
           <div class="row g-4 mb-4">
             <div class="d-flex flex-row-reverse">
               <button class="btn btn-success">
@@ -88,47 +104,55 @@
         <div class="container">
           <div class="row">
             <!-- CATEGORY CARDS -->
-             <%if(category.length>0){%>
-              <%category.forEach((item)=>{%>
+            <%if(category.length>0){%> <%category.forEach((item)=>{%>
             <div class="col-md-4 mb-5">
               <div class="card" style="width: 350px">
                 <img
                   class="card-img-top"
                   src="<%=item.image%>"
                   alt="Card image"
-                  style="width: 350px;height:350px"
+                  style="width: 350px; height: 350px"
                 />
                 <div class="card-body">
                   <h4 class="card-title"><%=item.categoryName%></h4>
                   <p class="card-text"><%=item.description%></p>
-                  <a href="/admin/category/edit?id=<%=item._id%>" class="btn btn-primary">Edit</a>
+                  <a
+                    href="/admin/category/edit?id=<%=item._id%>"
+                    class="btn btn-primary"
+                    >Edit</a
+                  >
 
                   <%if(item.isActive){%>
-                    <a href='/admin/category/deactivate?id=<%=item._id%>' 
-                      class="btn btn-secondary text-decoration-none"
-                      onclick="return confirm('Are you sure you want to deactivate <%= item.categoryName %>?');">
-                      Click to Deactivate</a>
-                    <%}else{%>
-                      <a href='/admin/category/activate?id=<%=item._id%>' 
-                        class="btn btn-warning me-2 text-decoration-none"
-                      onclick="return confirm('Are you sure you want to activate <%= item.categoryName %>?');">
-                      Click to Activate</a>
-                      <%}%>
-
+                  <a
+                    href="/admin/category/deactivate?id=<%=item._id%>"
+                    class="btn btn-secondary text-decoration-none"
+                    onclick="return confirm('Are you sure you want to deactivate <%= item.categoryName %>?');"
+                  >
+                    Click to Deactivate</a
+                  >
+                  <%}else{%>
+                  <a
+                    href="/admin/category/activate?id=<%=item._id%>"
+                    class="btn btn-warning me-2 text-decoration-none"
+                    onclick="return confirm('Are you sure you want to activate <%= item.categoryName %>?');"
+                  >
+                    Click to Activate</a
+                  >
+                  <%}%>
                 </div>
               </div>
             </div>
             <%})%>
             <%}else{%>
-              <div class="d-flex justify-content-center">
-                <h6 class="h6">No categories found..</h6>
-              </div>
-              <%}%>
+            <div class="d-flex justify-content-center">
+              <h6 class="h6">No categories found..</h6>
+            </div>
+            <%}%>
             <!-- CATEGORY CARDS -->
           </div>
         </div>
-<!-- PAGINATION -->
-<div class="d-flex justify-content-end me-5 mt-5">
+        <!-- PAGINATION -->
+        <div class="d-flex justify-content-end me-5 mt-5">
           <nav>
             <ul class="pagination">
               <% if (page > 1) { %>
@@ -140,7 +164,8 @@
                   >Prev</a
                 >
               </li>
-              <% } %> <% for (let i = 1; i <= totalPages; i++) { %>
+              <% } %>
+              <% for (let i = 1; i <= totalPages; i++) { %>
               <li class="page-item <%= page === i ? 'active' : '' %>">
                 <a
                   class="page-link"
@@ -149,7 +174,8 @@
                   ><%= i %></a
                 >
               </li>
-              <% } %> <% if (page < totalPages) { %>
+              <% } %>
+              <% if (page < totalPages) { %>
               <li class="page-item">
                 <a
                   class="page-link"
@@ -161,9 +187,8 @@
               <% } %>
             </ul>
           </nav>
-</div>
- <!-- PAGINATION -->
-        
+        </div>
+        <!-- PAGINATION -->
       </main>
     </div>
 
